# litgraph

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: heartbeat.py  knowledge_graph.py  router.py
app/core/: config.py  event_handlers.py
app/data_models/: heartbeat.py  payload.py
