[tool.poetry]
name = "litgraph"
version = "0.1.0"
description = "Microservice to return knowledge graphs based on search term"
authors = ["Harish Varma Siravuri <harish.siravuri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.2.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
